--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@mui/material": "^5.11.3",
     "react-router-dom": "^6.4.4",
     "react-select": "^5.7.0",
-    "react-spinners": "^0.13.7"
+    "react-sortablejs": "^6.1.4",
+    "react-spinners": "^0.13.7",
+    "sortablejs": "^1.15.0"
   }
 }
